--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,7 +27,7 @@ and open the template in the editor.
             </div>
             <a href="#Notebook">Notebooks</a>
             <a href="#Crackers">Crackers</a>
-            <a href="#About">About</a>
+            <a href="/public_html/About">About</a>
         </div>
         <div class="Tab">
         <p><span></span>Welcome to Deiva Trader!! We are very glad to do business with great organization/person like you. Our goal is to make delight the customer. To delight customer, we are serving good quality product with reasonable rates. So, you no need to bargain with us. Currently, we are trading all kinds of shoes, all sizes of notebooks and crackers.</p>
