--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ and open the template in the editor.
     <head>
         <title>Deiva Trader</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3mobile.css">
         <link href="Home.css" rel="stylesheet" type="text/css">
     </head>
     <body>
