--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@ and open the template in the editor.
     <body>
         <div class="Banner"></div>
         <div style="display: inline-block;height: 10%"></div>
-        <div class="Header">ABOUT</div>
+        <div class="Header" style="text-align:center;">ABOUT</div>
         <div class="Tab"><p><span></span>Since 5years, We are doing trading business.I am an Engineer. But my wish to become a respectful businessman. We are purchasing bulk quantities from manufacturers, we can give best quality with reasonable price. Our main goal is customer focus and making him delight. </p>
             <p><span></span>We can serve any of the School & College requirements with bulk quantities.</p>
             
