--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
                 <div class="Dropdown-content">
                     <a href="#School">School Shoes</a>
                     <a href="#College">College Shoes</a>
-                    <a href="#Sport">Sport Shoes</a>
+                    <a href="Sportshoe.html">Sport Shoes</a>
                     <a href="#Safety">Safety Shoes</a>
                 </div>
             </div>
