--- a/Sportshoe.html
+++ b/Sportshoe.html
@@ -20,7 +20,7 @@ and open the template in the editor.
    <div class="row">
   <div class="column1">
       <figure>
-      <img  src="I:\Business\Deiva Trader\shoe images\ASE\badmitton.jpg"  onclick="openModal();currentSlide(1)" class="hover-shadow figimg" >
+      <img  src="Images/Sportshoes/badmitton.jpg"  onclick="openModal();currentSlide(1)" class="hover-shadow figimg" >
       <figcaption> Fig1 - Badminton Shoe</figcaption>
       </figure>
   </div>
