--- a/Sportshoe.html
+++ b/Sportshoe.html
@@ -26,7 +26,7 @@ and open the template in the editor.
   </div>
   <div class="column1">
       <figure>
-    <img  src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-2.jpg"  onclick="openModal();currentSlide(2)" class="hover-shadow figimg">
+    <img  src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-2.jpg" alt="deiva"  onclick="openModal();currentSlide(2)" class="hover-shadow figimg">
     <figcaption>Fig2 - ASE Pro Shoe</figcaption>
       </figure>
   </div>
