--- a/Sportshoe.html
+++ b/Sportshoe.html
@@ -20,7 +20,7 @@ and open the template in the editor.
    <div class="row">
   <div class="column1">
       <figure>
-      <img  src="Capture.PNG" alt="deiva" onclick="openModal();currentSlide(1)" class="hover-shadow figimg" >
+      <img  src="Images/Sportshoes/badmitton.jpg" alt="deiva" onclick="openModal();currentSlide(1)" class="hover-shadow figimg" >
       <figcaption> Fig1 - Badminton Shoe</figcaption>
       </figure>
   </div>
