--- a/Sportshoe.html
+++ b/Sportshoe.html
@@ -26,37 +26,37 @@ and open the template in the editor.
   </div>
   <div class="column1">
       <figure>
-    <img  src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-2.jpg" alt="deiva"  onclick="openModal();currentSlide(2)" class="hover-shadow figimg">
+    <img  src="Images/Sportshoes/Untitled-2.jpg" alt="deiva"  onclick="openModal();currentSlide(2)" class="hover-shadow figimg">
     <figcaption>Fig2 - ASE Pro Shoe</figcaption>
       </figure>
   </div>
   <div class="column1">
       <figure>
-    <img src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-8.jpg"  onclick="openModal();currentSlide(3)" class="hover-shadow figimg">
+    <img src="Images/Sportshoes/Untitled-8.jpg"  onclick="openModal();currentSlide(3)" class="hover-shadow figimg">
     <figcaption>Fig3 - ASE Jogging Shoe</figcaption>
       </figure>
   </div>
   <div class="column1">
       <figure>
-    <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\highsierra.jpg"  onclick="openModal();currentSlide(4)" class="hover-shadow figimg">
+    <img src="Images/Sportshoes/highsierra.jpg"  onclick="openModal();currentSlide(4)" class="hover-shadow figimg">
     <figcaption>Fig4 - High Sierra Airflow Sports Shoe</figcaption>
       </figure>
   </div>
         <div class="column1">
       <figure>
-    <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\trv.jpg"  onclick="openModal();currentSlide(5)" class="hover-shadow figimg">
+    <img src="Images/Sportshoes/trv.jpg"  onclick="openModal();currentSlide(5)" class="hover-shadow figimg">
     <figcaption>Fig5 - TRV Sports Shoe</figcaption>
       </figure>
   </div>
         <div class="column1">
       <figure>
-    <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\sonaxolightweight.jpg"  onclick="openModal();currentSlide(6)" class="hover-shadow figimg">
+    <img src="Images/Sportshoes/sonaxolightweight.jpg"  onclick="openModal();currentSlide(6)" class="hover-shadow figimg">
     <figcaption>Fig6 - Sonaxo LightWeight Sports Shoe</figcaption>
       </figure>
   </div>
          <div class="column1">
       <figure>
-    <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\sonaxo1.jpg"  onclick="openModal();currentSlide(6)" class="hover-shadow figimg">
+    <img src="Images/Sportshoes/sonaxo1.jpg"  onclick="openModal();currentSlide(6)" class="hover-shadow figimg">
     <figcaption>Fig7 - Sonaxo Sports Shoe</figcaption>
       </figure>
   </div>
@@ -69,34 +69,34 @@ and open the template in the editor.
 
     <div class="mySlides">
       <div class="numbertext">1 / 7</div>
-      <img src="I:\Business\Deiva Trader\shoe images\ASE\badmitton.jpg" style="width:80%;height: 600px;">
+      <img src="Images/Sportshoes/badmitton.jpg" style="width:80%;height: 600px;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 7</div>
-      <img src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-2.jpg" style="width:80%;height: 600px;">
+      <img src="Images/Sportshoes/Untitled-2.jpg" style="width:80%;height: 600px;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 7</div>
-      <img src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-8.jpg" style="width:80%;height: 600px;">
+      <img src="Images/Sportshoes/Untitled-8.jpg" style="width:80%;height: 600px;">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 7</div>
-      <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\highsierra.jpg" style="width:80%;height: 600px;">
+      <img src="Images/Sportshoes/highsierra.jpg" style="width:80%;height: 600px;">
     </div>
        <div class="mySlides">
       <div class="numbertext">5 / 7</div>
-      <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\trv.jpg" style="width:80%;height: 600px;">
+      <img src="Images/Sportshoes/trv.jpg" style="width:80%;height: 600px;">
     </div>
        <div class="mySlides">
       <div class="numbertext">6 / 7</div>
-      <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\sonaxolightweight.jpg" style="width:80%;height: 600px;">
+      <img src="Images/Sportshoes/sonaxolightweight.jpg" style="width:80%;height: 600px;">
     </div>
         <div class="mySlides">
       <div class="numbertext">7 / 7</div>
-      <img src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\sonaxo1.jpg" style="width:80%;height: 600px;">
+      <img src="Images/Sportshoes/sonaxo1.jpg" style="width:80%;height: 600px;">
     </div>
 
     <!-- Next/previous controls -->
@@ -110,28 +110,28 @@ and open the template in the editor.
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="I:\Business\Deiva Trader\shoe images\ASE\badmitton.jpg" onclick="currentSlide(1)" alt="ASE Badminton Shoe">
+      <img class="demo" src="Images/Sportshoes/badmitton.jpg" onclick="currentSlide(1)" alt="ASE Badminton Shoe">
     </div>
 
     <div class="column">
-      <img class="demo" src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-2.jpg" onclick="currentSlide(2)" alt="ASE Pro Shoe">
+      <img class="demo" src="Images/Sportshoes/Untitled-2.jpg" onclick="currentSlide(2)" alt="ASE Pro Shoe">
     </div>
 
     <div class="column">
-      <img class="demo" src="I:\Business\Deiva Trader\shoe images\ASE\Untitled-8.jpg" onclick="currentSlide(3)" alt="ASE Jogging Shoe">
+      <img class="demo" src="Images/Sportshoes/Untitled-8.jpg" onclick="currentSlide(3)" alt="ASE Jogging Shoe">
     </div>
 
     <div class="column">
-      <img class="demo" src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\highsierra.jpg" onclick="currentSlide(4)" alt="High Sierra Airflow Sports Shoe">
+      <img class="demo" src="Images/Sportshoes/highsierra.jpg" onclick="currentSlide(4)" alt="High Sierra Airflow Sports Shoe">
     </div>
      <div class="column">
-      <img class="demo" src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\trv.jpg" onclick="currentSlide(5)" alt="TRV Sport Shoe">
+      <img class="demo" src="Images/Sportshoes/trv.jpg" onclick="currentSlide(5)" alt="TRV Sport Shoe">
     </div>
      <div class="column">
-      <img class="demo" src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\sonaxolightweight.jpg" onclick="currentSlide(6)" alt="Sonaxo LightWeight Sport Shoe">
+      <img class="demo" src="Images/Sportshoes/sonaxolightweight.jpg" onclick="currentSlide(6)" alt="Sonaxo LightWeight Sport Shoe">
     </div>
     <div class="column">
-      <img class="demo" src="I:\Business\Deiva Trader\shoe images\Punith Bangalore\sonaxo1.jpg" onclick="currentSlide(7)" alt="Sonaxo Sport Shoe">
+      <img class="demo" src="Images/Sportshoes/sonaxo1.jpg" onclick="currentSlide(7)" alt="Sonaxo Sport Shoe">
     </div>
   </div>
 </div>
