--- a/Sportshoe.html
+++ b/Sportshoe.html
@@ -44,7 +44,7 @@ and open the template in the editor.
   </div>
         <div class="column1">
       <figure>
-    <img src="Images/Sportshoes/trv.jpg"  onclick="openModal();currentSlide(5)" class="hover-shadow figimg">
+    <img src="Images/Sportshoes/trv1.jpg"  onclick="openModal();currentSlide(5)" class="hover-shadow figimg">
     <figcaption>Fig5 - TRV Sports Shoe</figcaption>
       </figure>
   </div>
