--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and open the template in the editor.
             <div class="Dropdown">
                 <button class="Dropdownbtn">Shoes</button>
                 <div class="Dropdown-content">
-                    <a href="#School">School Shoes</a>
+                    <a href="Schoolshoe.html">School Shoes</a>
                     <a href="#College">College Shoes</a>
                     <a href="Sportshoe.html">Sport Shoes</a>
                     <a href="#Safety">Safety Shoes</a>
