--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
                 <button class="Dropdownbtn">Shoes</button>
                 <div class="Dropdown-content">
                     <a href="Schoolshoe.html">School Shoes</a>
-                    <a href="#College">College Shoes</a>
+                    <a href="Collegeshoe.html">College Shoes</a>
                     <a href="Sportshoe.html">Sport Shoes</a>
                     <a href="#Safety">Safety Shoes</a>
                 </div>
