--- a/About.html
+++ b/About.html
@@ -9,10 +9,36 @@ and open the template in the editor.
         <title>Deiva Trader</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link href="about.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="Banner"></div>
+        <nav class="navbar navbar-inverse">
+ <div class="container-fluid">
+   <div class="navbar-header">
+     <a class="navbar-brand" href="#">Deiva Trader</a>
+   </div>
+   <ul class="nav navbar-nav">
+     <li><a href="index.html">Home</a></li>
+     <li class="dropdown">
+       <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Shoes
+       <span class="caret"></span></a>
+       <ul class="dropdown-menu">
+         <li><a href="Schoolshoe.html">School Shoe</a></li>
+         <li><a href="Collegeshoe.html">College Shoe</a></li>
+         <li><a href="Sportshoe.html">Sports Shoe</a></li>
+         <li><a href="#">Safety Shoe</a></li>
+       </ul>
+     </li>
+     <li><a href="#">Notebooks</a></li>
+     <li><a href="#">Crackers</a></li>
+     <li><a href="About.html">About</a></li>
+   </ul>
+ </div>
+</nav>
         <div style="display: inline-block;height: 10%"></div>
         <div class="Header" style="text-align:center;">ABOUT</div>
         <div class="Tab"><p><span></span>Since 5years, We are doing trading business.I am an Engineer. But my wish to become a respectful businessman. We are purchasing bulk quantities from manufacturers, we can give best quality with reasonable price. Our main goal is customer focus and making him delight. </p>
